--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "axios": "^1.9.0",
+    "classnames": "^2.5.1",
     "front-end": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
