--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.0.1",
         "axios": "^1.9.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.56.3",
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.6.0",
         "react-toastify": "^11.0.5",
