--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-mask": "^1.1.18",
     "react-icons": "^5.5.0",
     "react-imask": "^7.6.1",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^7.5.3",
     "react-toastify": "^11.0.5",
     "yup": "^1.6.1"
