--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@hookform/resolvers": "^5.0.1",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "front-end": "file:",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-hook-mask": "^1.1.18",
