--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-imask": "^7.6.1",
     "react-number-format": "^5.4.4",
     "react-router-dom": "^7.5.3",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "yup": "^1.6.1"
   },
